syntax = "proto3";

package nft.v1beta1;

import "gogoproto/gogo.proto";

option go_package = "github.com/AutonomyNetwork/nft/types";
option (gogoproto.goproto_getters_all) = false;

message MarketPlace {
  string nftId = 1 [(gogoproto.moretags) = "yaml:\"NFTID\""];
  string denomID = 2 [
    (gogoproto.moretags) = "yaml:\"denom_id\""
  ];
  string price = 3;
  string seller = 4;
  string buyer = 5;
  bool filled = 6;
  ListedType listed_type = 7;
  string currency = 8;
  string fiat_amount = 9; 
  string order_ref_id = 10;
}

enum ListedType {
  option (gogoproto.goproto_enum_prefix) = false;

  LISTED_TYPE_UNSPECIFIED = 0 [(gogoproto.enumvalue_customname) = "Unspecified"];
  LISTED_TYPE_FIAT = 1 [(gogoproto.enumvalue_customname) = "Fiat"];
  LISTED_TYPE_CRYPTO = 2 [(gogoproto.enumvalue_customname) = "Crypto"];
}