syntax = "proto3";
package nft.v1beta1;

import "gogoproto/gogo.proto";
import "nft/v1beta1/nft.proto";
import "nft/v1beta1/market_place.proto";

option go_package = "github.com/AutonomyNetwork/nft/types";
option (gogoproto.goproto_getters_all) = false;

service Msg {
  rpc CreateDenom(MsgCreateDenom) returns (MsgCreateDenomResponse);
  rpc MintNFT(MsgMintNFT) returns (MsgMintNFTResponse);
  rpc UpdateNFT(MsgUpdateNFT) returns (MsgUpdateNFTResponse);
  rpc TransferNFT(MsgTransferNFT) returns (MsgTransferNFTResponse);
  rpc SellNFT(MsgSellNFT) returns (MsgSellNFTResponse);
  rpc BuyNFT(MsgBuyNFT) returns (MsgBuyNFTResponse);
  rpc CreateCommunity(MsgCreateCommunity) returns (MsgCreateCommunityResponse);
  rpc JoinCommunity(MsgJoinCommunity) returns(MsgJoinCommunityResponse);
  rpc UpdateCommunity(MsgUpdateCommunity) returns (MsgUpdateCommunityResponse);
  rpc UpdateDenom(MsgUpdateDenom) returns (MsgUpdateDenomResponse);
}

message MsgCreateDenom {
  option (gogoproto.equal) = true;

  string id = 1;
  string name = 2;
  string symbol = 3;
  string description = 4;
  string preview_uri = 5 [
    (gogoproto.moretags) = "yaml:\"preview_uri\"",
    (gogoproto.customname) = "PreviewURI"
  ];
  string creator = 6;
  repeated string depedent_collection = 7;
  string community_id = 8;
  string category = 9;
  bool on_demand_minting = 10;
  int64 total_nfts = 11;
  int64 available_nfts = 12;
  string data = 13;
}

message MsgCreateDenomResponse {}

message MsgMintNFT {
  string id = 1;
  string denom_id = 2 [(gogoproto.moretags) = "yaml:\"denom_id\""];
  Metadata metadata = 3 [(gogoproto.nullable) = false];
  string data = 4;
  bool transferable = 5;
  string creator = 6;
  string royalties = 7;
}

message MsgMintNFTResponse {}

message MsgUpdateNFT{
  string id = 1;
  string denomID = 2 [(gogoproto.moretags) = "yaml:\"denom_id\""];
  string royalties = 3;
  string owner = 4;
  string name = 5;
  string description = 6;
}

message MsgUpdateNFTResponse{}

message MsgTransferNFT {
  string id = 1;
  string denom_id = 2 [(gogoproto.moretags) = "yaml:\"denom_id\""];
  string sender = 3;
  string recipient = 4;
}

message MsgTransferNFTResponse{}

message MsgSellNFT {
  string id = 1;
  string denom_id = 2 [(gogoproto.moretags) = "yaml:\"denom_id\""];
  string price = 3;
  string seller = 4;
  ListedType listed_type = 5;
  string currency = 6;
  string fiat_amount = 7;
}

message MsgSellNFTResponse{}

message MsgBuyNFT {
  string id = 1;
  string denom_id = 2 [(gogoproto.moretags) = "yaml:\"denom_id\""];
  string buyer = 3;
  ListedType listed_type = 4;
  string currency = 5;
  string fiat_amount = 6;
  string order_ref_id = 7;
}

message MsgBuyNFTResponse{}

message  MsgCreateCommunity{
  string name = 1;
  string description = 2;
  string creator = 3;
  string preview_uri = 4;
  string id = 5;
  repeated string tags = 6;
  string data = 7;
}

message MsgCreateCommunityResponse {
  string id = 1;
}

message MsgJoinCommunity {
  string community_id = 1;
  string address = 2;
}

message MsgJoinCommunityResponse {

}

message MsgUpdateCommunity {
  string id = 1;
  string description = 2;
  string data = 3;
  repeated string tags = 4;
  string address = 5;
}

message MsgUpdateCommunityResponse {
  string id = 1;
}

message MsgUpdateDenom {
  string id = 1;
  string description = 2;
  string symbol = 3;
  string address = 4;
}

message MsgUpdateDenomResponse {
  string id = 1;
}